--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tiptap/extension-image": "^2.8.0",
     "@tiptap/react": "^2.8.0",
     "@tiptap/starter-kit": "^2.8.0",
+    "dompurify": "^3.1.7",
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -26,6 +27,7 @@
     "react-froala-wysiwyg": "^4.3.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/draft-convert": "^2.1.8",
     "@types/draft-js": "^0.11.18",
     "@types/draftjs-to-html": "^0.8.4",
