--- a/package.json
+++ b/package.json
@@ -19,23 +19,27 @@
     "draftjs-to-html": "^0.9.1",
     "font-awesome": "^4.7.0",
     "jodit-react": "^4.1.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
-    "react-froala-wysiwyg": "^4.3.0"
+    "react-froala-wysiwyg": "^4.3.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
     "@types/draft-convert": "^2.1.8",
     "@types/draft-js": "^0.11.18",
     "@types/draftjs-to-html": "^0.8.4",
+    "@types/lodash": "^4.17.10",
     "@types/mongodb": "^4.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-draft-wysiwyg": "^1.13.8",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
