--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "hotziah",
   "version": "0.1.0",
@@ -11,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tiptap/core": "^2.8.0",
-    "@tiptap/extension-image": "^2.8.0",
-    "@tiptap/react": "^2.8.0",
-    "@tiptap/starter-kit": "^2.8.0",
+    "@faker-js/faker": "^9.0.3",
+    "bcrypt": "^5.1.1",
+    "cryptr": "^6.3.0",
     "dompurify": "^3.1.7",
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "font-awesome": "^4.7.0",
     "jodit-react": "^4.1.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
     "next": "14.2.15",
@@ -31,10 +29,13 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cryptr": "^4.0.3",
     "@types/dompurify": "^3.0.5",
     "@types/draft-convert": "^2.1.8",
     "@types/draft-js": "^0.11.18",
     "@types/draftjs-to-html": "^0.8.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.10",
     "@types/mongodb": "^4.0.6",
     "@types/node": "^20",
