--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "titleBar.inactiveBackground": "#e3362c99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#e3362c"
+  "peacock.color": "#e3362c",
+  "cSpell.words": ["signup"]
 }
