--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "hotziah",
   "version": "0.1.0",
@@ -24,6 +22,7 @@
     "draftjs-to-html": "^0.9.1",
     "font-awesome": "^4.7.0",
     "jodit-react": "^4.1.2",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "14.2.15",
