--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build",
     "migrate": "prisma migrate dev"
   },
   "dependencies": {
@@ -46,6 +47,7 @@
     "@types/react-dom": "^18",
     "@types/react-draft-wysiwyg": "^1.13.8",
     "@types/uuid": "^10.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
