--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
     "react-froala-wysiwyg": "^4.3.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
