--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/draft-convert": "^2.1.8",
     "@types/draft-js": "^0.11.18",
     "@types/draftjs-to-html": "^0.8.4",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20",
