--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss": "^8",
     "prisma": "^5.21.0",
     "tailwindcss": "^3.4.1",
+    "typedoc": "^0.26.11",
     "typescript": "^5"
   }
 }
